<resources>
    <string name="app_name">Hello world</string>
    <string name="hello">Привет</string>
    <string name="world">МИР</string>
    <string name="button_with_buttons">Кнопки и табуретки</string>
    <string name="button_with_input">Поля выпаса ввода</string>
    <string name="button_with_radio">Чекбокс на Радио</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_info">Кнопка плюс добавляет новую кнопку в контейнер наверху</string>
    <string name="button_number">кнопка номер %s</string>
    <string name="symbol_plus">+</string>
    <string name="many_buttons">Ну может хватит уже?!</string>
    <string name="text_inputs_info">Поля ввода разного типа</string>
    <string name="one_line_text">Однострочный текст</string>
    <string name="multi_line_text">Текст на 5 строк</string>
    <string name="password">Пароль</string>
    <string name="date">Год</string>
    <string name="hide_keyboard">Спрятать %s клавиатуру</string>
    <string name="date_value">1980</string>
    <string name="_123456">123456</string>
    <string name="appliances">Приборы</string>
    <string name="radios">Выключить радио</string>
    <string name="slider">Выключить ползунок</string>
    <string name="text_info_radio">Выбрать вариант по радио</string>
    <string name="variant_1">Вариант 1</string>
    <string name="variant_2">Вариант 2</string>
    <string name="variant_3">Вариант 3</string>
    <string name="text_info_slider">Выбрать вариант ползунком</string>

</resources>