<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.helloworld.InputsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:fontFamily="@font/kurale"
            android:text="@string/text_inputs_info"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:padding="5dp"
            android:id="@+id/editTextTextPersonName"
            android:background="@drawable/border_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:autofillHints="username"
            android:hint="@string/one_line_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:background="@drawable/border_input"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/multi_line_text"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:background="@drawable/border_input"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dp"
            android:text="@string/_123456"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />


        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:background="@drawable/border_input"
            android:hint="@string/date"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="5dp"
            android:text="@string/date_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:paddingStart="@dimen/extra_small"
            android:paddingEnd="@dimen/extra_small"
            android:text="@string/hide_keyboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>