<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.helloworld.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_hello"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/hello"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/imageSize"
            android:layout_height="@dimen/imageSize"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:tintMode="src_atop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_hello"
            app:srcCompat="@drawable/world"
            app:tint="@color/tint" />

        <TextView
            android:id="@+id/text_world"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/world"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonToButtons"
            style="@style/styleButton"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/medium"
            android:text="@string/button_with_buttons"
            app:layout_constraintBottom_toTopOf="@+id/buttonToInputs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_world" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonToInputs"
            style="@style/styleButton"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/medium"
            android:text="@string/button_with_input"
            app:layout_constraintBottom_toTopOf="@+id/buttonToRadios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonToButtons" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonToRadios"
            style="@style/styleButton"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/medium"
            android:text="@string/button_with_radio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonToInputs" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>