<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.helloworld.RadiosFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textInfoCheckBoxes"
            style="@style/smallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/text_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            app:buttonTint="@color/purple_500"
            android:id="@+id/checkBoxMain"
            style="@style/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/medium"
            android:text="@string/appliances"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInfoCheckBoxes" />

        <CheckBox
            app:buttonTint="@color/purple_500"
            android:id="@+id/checkBoxRadios"
            style="@style/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/medium"
            android:enabled="false"
            android:text="@string/radios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxMain" />

        <CheckBox
            app:buttonTint="@color/purple_500"
            android:id="@+id/checkBoxSlider"
            style="@style/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/medium"
            android:enabled="false"
            android:text="@string/slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxRadios" />

        <TextView
            android:id="@+id/textInfoRadios"
            style="@style/smallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large"
            android:text="@string/text_info_radio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSlider" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInfoRadios">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButton0"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/purple_500"
                android:layout_height="wrap_content"
                app:buttonTint="@color/purple_500"
            />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/purple_500"
                android:layout_height="wrap_content"
                app:buttonTint="@color/purple_500"
                android:text="@string/variant_1" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButton2"
                android:checked="true"
                app:buttonTint="@color/purple_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/variant_2" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButton3"
                app:buttonTint="@color/purple_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/variant_3" />
        </RadioGroup>

        <TextView
            android:id="@+id/textInfoSlider"
            style="@style/smallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:text="@string/text_info_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <SeekBar
            android:progressBackgroundTint="@color/black"
            android:progressTint="#00000000"
            android:thumbTint="@color/purple_500"
            android:id="@+id/slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginEnd="@dimen/medium"
            android:max="3"
            android:min="0"
            style="@style/SeekBarCustomSteps"
            android:progress="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInfoSlider" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>